<resources>

    <!-- Message -->
    <string name="message_update_success">Update succeed</string>
    <string name="message_validate_date">The bithday must be the format: YYYY-MM-DD</string>
    <string name="message_update_error">Error when updating: error </string>
    <string name="message_load_image_error">Cannot get image</string>
    <string name="message_updating">Updating&#8230;</string>
    <string name="message_loading">Loading&#8230;</string>
    <string name="message_upload">Uploading&#8230;</string>
    <string name="message_deleting">Deleting&#8230;</string>
    <!-- URL -->
    <string name="url_getcode">http://49.212.140.145/itell/user/get_code</string>
    <string name="url_authen">http://49.212.140.145/itell/user/authen_code</string>
    <string name="url_register">http://49.212.140.145/itell/user/regist_user</string>
    <string name="url_checkUser">http://49.212.140.145/itell/user/check_user?uuid=</string>
    <string name="url_listfriend">http://49.212.140.145/itell/friend/get_list_friend?user_id=%1$s&amp;uuid=</string>
    <string name="url_listfriend_search">http://49.212.140.145/itell/friend/search_friend</string>
    <string name="url_cancelItell">http://49.212.140.145/itell/itell/cancel_itell</string>
    <string name="url_postItell">http://49.212.140.145/itell/itell/post_itell</string>
    <string name="url_listInvite">http://49.212.140.145/itell/friend/get_list_invite?user_id=%1$s&amp;uuid=</string>
    <string name="url_contactFriend">http://49.212.140.145/itell/friend/get_contacts_is_friend</string>
    <string name="url_contactNoFriend">http://49.212.140.145/itell/friend/get_contacts_not_using</string>
    <string name="url_postitell">http://49.212.140.145/itell/itell/post_itell</string>
    <string name="url_postContact">http://49.212.140.145/itell/setting/post_contact</string>
    <string name="url_inviteMail">http://49.212.140.145/itell/friend/send_invite_email</string>
    <string name="app_name">iTell</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="itell">iTell</string>
    <!-- Register -->
    <string name="register_title">初回登録</string>
    <string name="register_choseNet">Hay chon mang</string>
    <string name="regis_inputNumber">Hay nhap vao so dien thoai</string>
    <string name="regis_code">Hap nhap code qua tinh nhan</string>
    <string name="regis_confirm">Da xac nhan</string>
    <string name="regis_input_username">username</string>

    <!-- -Friend -->
    <string name="friend_title">Friend Search</string>
    <string name="friend_list">Friends List</string>
    <string name="friend_searchName">Tim nick name</string>
    <string name="friend_who">Co the la nguoi quen?</string>
    <string name="friend_invite">Invite</string>
    <string name="friend_inputMailtoinvite"> ++  Input mail to invite friend ...</string>


    <!-- Badget &lt;br /&gt; replace \n -->
    <string name="badget_text1">さんに</string>
    <string name="badget_text11">バッジを贈りましょう！</string>
    <string name="badget_text21">さんとのコミュニケ</string>
    <string name="badget_text22">ーションはいかがでしたか？\nお好きなバッジを贈りましょう！</string>
     <string name="badget_button_text">贈らない</string>
    <!-- Profile -->
     <string name="profile_request_success">Request succeed</string>
    <string name="profile_request_error">Error when requesting: error </string>
    <string name="profile_message_error">Error when getting info of this user. \nPlease check network connection.</string>
    <string name="profile_title">Profile</string>
    <string name="profile_male">男性</string>
    <string name="profile_female">女性</string>
    <string name="profile_age">齢</string>
    <string name="profile_public_restrict">公開制限</string>
    <string name="profile_block">ブロック</string>
    <string name="profile_album_text">Album</string>
    <string name="profile_preview_ok">OK</string>
    <!-- Chat -->
    <string name="chat_title">Chat</string>
    <string name="chat_available_time">I tell ﾎﾞﾀﾝ有効時間</string>
    <string name="chat_chating">ﾁｬｯﾄ中</string>
    <string name="chat_keyboard">標準ｷｰﾎﾞｰﾄﾞ</string>
    <string name="chat_remain">残り</string>
    <string name="chat_time">時間</string>
    <string name="chat_time_minute">分</string>
    <string name="chat_time_second">秒</string>
    <string name="chat_btn_chat">Chat</string>
    <string name="chat_btn_store">Store</string>
    <string name="chat_cat_img">Category of stamp</string>
    <!-- Map -->
    <string name="map_button_map_title">Map</string>
    <string name="map_button_list_title">List</string>
    <string name="map_list_minute">分前</string>

    <!-- Setting -->
    <string name="profile_phone">電話番号（非公開）</string>
    <string name="profile_name">名前（非公開）</string>
    <string name="profile_nick_name">ニックネーム</string>
    <string name="profile_birth_year">生年月日</string>
    <string name="profile_public_birth">年齢公開</string>
    <string name="profile_year">年</string>
    <string name="profile_month">月</string>
    <string name="profile_date">日</string>
    <string name="setting_text">SETTING</string>

    <!-- Privacy -->
    <string name="privacy_blocklist">ブロックリスト</string>
    <string name="privacy_getcontact">電話帳自動送信</string>
    <string name="privacy_search">ニックネーム検索を許可</string>
    
    <!-- Register -->
    <string name="setting_register_title">登録情報</string>
    <string name="setting_register_mail">ﾒｰﾙｱﾄﾞﾙｽ（非公開）</string>
    <string name="setting_register_center">ﾒｰﾙｱﾄﾞﾙｽの登録をしていると\n友だちがあなたを見つけやすくなります！
        </string>
    <string name="setting_register_btn_text">ﾒｰﾙｱﾄﾞﾙｽ変更</string>
    <string name="setting_register_end">ﾒｰﾙｱﾄﾞﾙｽの変更は、上記ブタンから\n手続きを行ってください</string>
    <!-- Push -->
    <string name="push_title">プッシュ通知設定</string>

    <drawable name="map_bg_boy">#04b5b3</drawable>
    <drawable name="map_bg_girl">#f48080</drawable>

    <!-- color -->
    <drawable name="selected">#dbe5f1</drawable>
    <drawable name="blue">#7bacfa</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="white">#FFFFFF</drawable>
    <drawable name="gray">#F0F0F0</drawable>
    <drawable name="DarkGray">#A9A9A9</drawable>
    <drawable name="profileSetting">#fafafa</drawable>
    <drawable name="LightSlateGray">#778899</drawable>

    <string-array name="cameraUploadItems">
        <item>Take a picture</item>
        <item>Choose from gallery</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="AvatarOption">
        <item>Preview Avatar</item>
        <item>Delete Avatar</item>
        <item>Cancel</item>
    </string-array>
</resources>