<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <RelativeLayout
	        android:id="@+id/register_rl_title"
	        android:layout_width="fill_parent"
	        android:layout_height="50dip"
	        android:layout_alignParentTop="true" 
	        android:background="@drawable/chat_bg_top_bar">
	
	        <Button
	            android:id="@+id/btnRegisterBack"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="10dip"
	            android:background="@drawable/chat_back_button_selector" />
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:text="@string/setting_register_title"
	            android:textColor="#000000"
	            android:textSize="18dip"
	            android:textStyle="bold" />
	    </RelativeLayout>
	     <TextView
	         android:layout_below="@+id/register_rl_title"
	         android:id="@+id/register_phone_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
             android:layout_marginTop="10dip"
             android:layout_alignParentLeft="true"
             android:text="@string/profile_phone"
             android:textSize="18dip"
             android:textStyle="bold" />
	      <TextView
             android:layout_below="@+id/register_phone_title"
             android:id="@+id/register_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:layout_centerHorizontal="true"
             android:text="0912-345-678"
             android:textSize="18dip"
             android:textStyle="bold" />
	       <TextView
             android:layout_below="@+id/register_phone"
             android:id="@+id/register_mail_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
             android:layout_marginTop="20dip"
             android:layout_alignParentLeft="true"
             android:text="@string/setting_register_mail"
             android:textSize="18dip"
             android:textStyle="bold" />
          <TextView
             android:layout_below="@+id/register_mail_title"
             android:id="@+id/register_mail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:layout_centerHorizontal="true"
             android:text="abcdefg@xxxx.ne.jp"
             android:textSize="18dip"
             android:textStyle="bold" />
           <TextView
             android:layout_below="@+id/register_mail"
             android:id="@+id/register_tv_center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dip"
             android:layout_marginLeft="10dip"
             android:layout_alignParentLeft="true"
             android:text="@string/setting_register_center"
             android:textSize="10dip"
             android:textColor="@android:color/darker_gray"
             />
           <Button 
               android:layout_below="@+id/register_tv_center"
               android:id="@+id/register_btn_change"
                android:layout_width="fill_parent"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/darker_gray"
                android:text="@string/setting_register_btn_text"/>
           <TextView
	             android:layout_below="@+id/register_btn_change"
	             android:id="@+id/register_tv_end"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginTop="10dip"
	             android:layout_marginLeft="10dip"
	             android:layout_centerHorizontal="true"
	             android:text="@string/setting_register_end"
	             android:textSize="10dip"
	             android:textColor="@android:color/darker_gray"
	             android:gravity="center"
             />
	</RelativeLayout>
</ScrollView>