<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/badget_title"
        android:layout_alignParentTop="true"
        android:background="@drawable/badge_top_bg"/>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/badget_title"
        android:background="@drawable/badge_bottom_bg">
    <LinearLayout 
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/badget_ll_nick"
        android:orientation="horizontal"
        >
         <TextView 
            android:id="@+id/badget_tv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="nick"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/badget_text1"/>
    </LinearLayout>
     <TextView 
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/badget_ll_nick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:textStyle="bold"
         android:id="@+id/badget_tv_nick1"
         android:text="@string/badget_text11"/>
    <LinearLayout 
        android:layout_below="@+id/badget_tv_nick1"
        android:id="@+id/badget_ll_avatar"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:background="@drawable/badget_image_box"
        android:padding="3dip">
        <ImageView
            android:id="@+id/badget_img_avatar"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:scaleType="centerCrop"
            android:padding="2dip"
            android:src="@drawable/profile_image1" />
    </LinearLayout>
     <LinearLayout 
        android:layout_below="@+id/badget_ll_avatar"
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/badget_ll_text2"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	         <TextView 
	            android:id="@id/badget_tv_nick"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="14dp"
	            android:textStyle="bold"
	            android:text="nick"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="14dp"
	            android:textStyle="bold"
	            android:text="@string/badget_text21"/>
        </LinearLayout>
         <TextView 
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textStyle="bold"
            android:id="@+id/badget_tv_desc2"
            android:text="@string/badget_text22"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/badget_ll_badget"
        android:layout_below="@+id/badget_ll_text2"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:layout_toLeftOf="@+id/badget_ll_normal"
        android:layout_width="fill_parent">
        <LinearLayout
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_toLeftOf="@+id/badget_ll_normal"
            android:layout_marginRight="25dip"
            android:gravity="center"
            android:id="@+id/badget_ll_good"
            android:background="@drawable/badget_smiley_selector">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:background="@drawable/profile_awesome_icon"
                />
        </LinearLayout>
         <LinearLayout 
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/badget_ll_normal"
            android:background="@drawable/badget_smiley_selector"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:background="@drawable/profile_really_good_icon"
                />
        </LinearLayout>
         <LinearLayout 
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginLeft="25dip"
            android:layout_toRightOf="@+id/badget_ll_normal"
            android:gravity="center"
            android:id="@+id/badget_ll_bad"
            android:background="@drawable/badget_smiley_selector"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:background="@drawable/profile_like_icon"
                />
        </LinearLayout>
    </RelativeLayout>   
    <Button
        android:id="@+id/badget_btn"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:layout_centerHorizontal="true"
        android:text="@string/badget_button_text"
        android:layout_below="@+id/badget_ll_badget"
        android:background="@drawable/badget_button_selector"
        />
    </RelativeLayout>
</RelativeLayout>